# pcca

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.md  content-curation-agent-spec-v2.md  pyproject.toml  scenarios.md  setup.py  tasks.md
scripts/: repro_extraction.py
scripts/llm_ab_test/: README.md  clean_set.py  multilingual.py  prod_failures.py
src/pcca/: __init__.py  __main__.py  app.py  cli.py  config.py  content_quality.py  db.py  dependency_doctor.py  desktop_shell.py  digest_renderer.py  engagement.py  launchd.py  logging_utils.py  (+3 more)
tests/: test_browser_session_manager.py  test_cli.py  test_collector_contract.py  test_config.py  test_content_quality.py  test_curation_engine.py  test_db_bootstrap.py  test_debug_bundle_service.py  test_dependencies.py  test_desktop_command_service.py  test_desktop_shell.py  test_digest_feedback.py  test_digest_renderer.py  test_embedding_service.py  test_engagement.py  test_feedback_service.py  test_follow_import_service.py  test_intent_parser.py  test_item_repository.py  test_item_score_repository.py  test_launchd.py  test_linkedin_collector.py  test_linkedin_utils.py  test_logging_utils.py  test_model_router.py  test_onboarding_repository.py  test_pipeline_orchestrator.py  test_preference_extraction_service.py  test_preference_service.py  test_routing_service.py  test_segmenter.py  test_session_capture_service.py  test_source_discovery_service.py  test_source_service.py  test_spotify_collector.py  test_telegram_service.py  test_youtube_transcript_service.py  test_youtube_utils.py  test_yt_dlp_service.py
(+54 files in other folders)
